# sonar-publico

./: .gitignore  Makefile  README.md  SPEC.md  config.toml  pyproject.toml
.github/workflows/: ci.yml
api/: pyproject.toml
api/app/: consultas.py  db.py  main.py
api/tests/: conftest.py  test_endpoints.py  test_health.py
docs/: acessibilidade.md  casos-sucessoras.md  fontes.md  layouts.md  regulamento.md  validacao-p18.md
pipeline/: pyproject.toml
pipeline/radar_pipeline/: amostras.py  cnpj.py  config.py  contratos.py  fontes.py  normalize.py  pipeline.py  sancoes.py  staging.py  vinculos.py
pipeline/tests/: test_cnpj.py  test_config.py  test_contratos.py  test_fontes.py  test_normalize.py  test_pipeline.py  test_pncp.py  test_sancoes.py  test_vinculos.py
web/: README.md  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/busca/: page.tsx
web/app/empresa/[cnpj]/: not-found.tsx  page.tsx
web/app/metodologia/: page.tsx
web/app/orgao/[codigo]/: page.tsx
web/app/orgaos/: page.tsx
web/components/: badge-grau.tsx  barra-busca.tsx  botao-copiar.tsx  botao-voltar.tsx  grafo-vinculos.tsx
web/lib/: api.ts  formato.ts  glossario.ts
