[project]
name = "radar-api"
version = "0.1.0"
description = "API pública do Sonar Público (FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.3",
    "fastapi>=0.115",
    "uvicorn>=0.34",
]

[dependency-groups]
dev = [
    "httpx>=0.28",
    "pytest>=8",
    "ruff>=0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
