[project]
name = "radar-pipeline"
version = "0.1.0"
description = "Pipeline de dados do Radar de Sanções: download, normalização e cruzamento das bases públicas"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.3",
    "httpx>=0.28",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["radar_pipeline"]
